--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <section class="container">
-    <nav>
+    <nav class="site-nav">
             <a href="/" class="logo"> <span class="web"> WEB </span> STUDIO </a>
 </a>
 <ul class="buttons">
@@ -28,11 +28,13 @@
 </header>
 
 <main>
-    <section class="container">
+    <div class="effectivesection">
+    <section class="container" >
 <h1 class="bigtext">Effective Solutions for Your Business</h1>
 
 <button type="button" class="orderbtn">Order Service</button>
-    </section>
+    </section> 
+</div>
 
 <div class="textmarginbot">
 <section class="container">
@@ -72,7 +74,6 @@
 </section>
 </div>
 
-
 <section class="cloud">
 
 <h2 class="text">Our Team</h2>
@@ -83,7 +84,8 @@
     <li><img src="images/img-3.jpeg" alt="Employee" width="300" height="300"><h3 class="name">Camila Garcia</h3><p class="job">Marketing</p></li>
     <li><img src="images/img-4.jpeg" alt="Employee"width="300" height="300"><h3 class="name">Daniel Wilson</h3><p class="job">UI Designer</p></li>
 </ul>
-</div class="footmargin">
+
+</div>
 </section>
 </main>
 <footer class="foot">
