--- a/Portfolio.html
+++ b/Portfolio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
+    <header class="container">
         <nav>
                 <a href="/" class="logop"> <span class="webp"> WEB </span> STUDIO </a>
     </a>
@@ -29,7 +29,7 @@
 
 
 
-<main>
+<main class="container">
     <section>
 <ul>
     <li> <button type="button" class="buttonstack">All</button></li>
