--- a/index.html
+++ b/index.html
@@ -15,70 +15,72 @@
             <a href="/" class="logo"> <span class="web"> WEB </span> STUDIO </a>
 </a>
 <ul class="buttons">
-    <li><a href="" class="buttons">Studio</a></li>
+    <li><a href="./index.html" class="buttons">Studio</a></li>
     <li><a href="./Portfolio.html" class="buttons">Portfolio</a></li>
-    <li><a href="" class="buttons">Contacts</a></li>
+    <li><a href="" class="buttons" class="mr">Contacts</a></li>
+</ul>
+
+<ul class="address">
+    <li class="makeflex"><a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a> </li>
+    <li class="makeflex"><a href="tel:+11 (000) 111-11-11" class="address">+11 (000) 111-11-11</a> </li>
 </ul>
 </nav>
-<ul class="address">
-    <li><a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a> </li>
-    <li><a href="tel:+11 (000) 111-11-11" class="address">+11 (000) 111-11-11</a> </li>
-</ul>
 </section>
 </header>
 
 <main>
     <div class="effectivesection">
     <section class="container" >
-<h1 class="bigtext">Effective Solutions for Your Business</h1>
+<h1 class="bigtext">Effective Solutions <br> for Your Business</h1>
 
 <button type="button" class="orderbtn">Order Service</button>
     </section> 
 </div>
 
+
+
 <div class="textmarginbot">
 <section class="container">
 
-
-<ul>
-    <li>
+<ul class="block">
+    <li class="blockwdt">
        <h3 class="maintext">Strategy</h3>
        <p class="minortext">Our goal is to identify the business
         problem to walk away with the perfect and creative solution. </p>
     </li>
 
-    <li>
+    <li class="blockwdt">
         <h3 class="maintext">Punctuality</h3>
         <p class="minortext">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
     </li>
 
-    <li>
+    <li class="blockwdt">
         <h3 class="maintext">Diligence</h3>
         <p class="minortext">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
     </li>
 
-    <li>
+    <li class="blockwdt">
         <h3 class="maintext">Technologies</h3>
         <p class="minortext">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
     </li>
 </ul>
-
 </div>
+
 <div class="container">
 <h2 class="question">What are we doing</h2>
 <ul class="imagesforquestion">
-    <li><img src="images/Rectangle 71.jpeg" alt="site photo" width="360" height="300" ></li>
-    <li><img src="images/Rectangle 71-2.jpeg" alt="site photo" width="360" height="300"></li>
-    <li><img src="images/Rectangle 71-3.jpeg" alt="site photo" width="360" height="300"></li>
+    <li class="imagesforquestion"><img src="images/Rectangle 71.jpeg" alt="site photo" width="360" height="300" ></li>
+    <li class="imagesforquestion"><img src="images/Rectangle 71-2.jpeg" alt="site photo" width="360" height="300"></li>
+    <li class="imagesforquestion"><img src="images/Rectangle 71-3.jpeg" alt="site photo" width="360" height="300"></li>
 </ul>
 </section>
 </div>
 
-<section class="cloud">
+<section class="cloud" >
+<div class="container">
+<h2 class="cloudtext">Our Team</h2>
 
-<h2 class="text">Our Team</h2>
-<div class="botimages">
-<ul>
+<ul class="botimages">
     <li><img src="images/img.jpeg" alt="Employee" width="300" height="300"> <h3 class="name">Mark Guerrero</h3><p class="job">Product Designer</p></li>
     <li><img src="images/img-2.jpeg" alt="Employee" width="300" height="300"><h3 class="name">Tom Ford</h3><p class="job">Frontend Developer</p></li>
     <li><img src="images/img-3.jpeg" alt="Employee" width="300" height="300"><h3 class="name">Camila Garcia</h3><p class="job">Marketing</p></li>
