--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <ul class="buttons">
     <li><a href="./index.html" class="buttons">Studio</a></li>
     <li><a href="./Portfolio.html" class="buttons">Portfolio</a></li>
-    <li><a href="" class="buttons" class="mr">Contacts</a></li>
+    <li><a href="" class="buttons">Contacts</a></li>
 </ul>
 
 <ul class="address">
@@ -30,7 +30,7 @@
 
 <main>
     <div class="effectivesection">
-    <section class="container" >
+    <section  class="container">
 <h1 class="bigtext">Effective Solutions <br> for Your Business</h1>
 
 <button type="button" class="orderbtn">Order Service</button>
@@ -39,8 +39,8 @@
 
 
 
-<div class="textmarginbot">
-<section class="container">
+<div class="container">
+<section class="textmarginbot">
 
 <ul class="block">
     <li class="blockwdt">
@@ -81,10 +81,10 @@
 <h2 class="cloudtext">Our Team</h2>
 
 <ul class="botimages">
-    <li><img src="images/img.jpeg" alt="Employee" width="300" height="300"> <h3 class="name">Mark Guerrero</h3><p class="job">Product Designer</p></li>
-    <li><img src="images/img-2.jpeg" alt="Employee" width="300" height="300"><h3 class="name">Tom Ford</h3><p class="job">Frontend Developer</p></li>
-    <li><img src="images/img-3.jpeg" alt="Employee" width="300" height="300"><h3 class="name">Camila Garcia</h3><p class="job">Marketing</p></li>
-    <li><img src="images/img-4.jpeg" alt="Employee"width="300" height="300"><h3 class="name">Daniel Wilson</h3><p class="job">UI Designer</p></li>
+    <li><img src="images/img.jpeg" alt="Employee" width="264" height="260"> <h3 class="name">Mark Guerrero</h3><p class="job">Product Designer</p></li>
+    <li><img src="images/img-2.jpeg" alt="Employee" width="264" height="260"><h3 class="name">Tom Ford</h3><p class="job">Frontend Developer</p></li>
+    <li><img src="images/img-3.jpeg" alt="Employee" width="264" height="260"><h3 class="name">Camila Garcia</h3><p class="job">Marketing</p></li>
+    <li><img src="images/img-4.jpeg" alt="Employee"width="264" height="260"><h3 class="name">Daniel Wilson</h3><p class="job">UI Designer</p></li>
 </ul>
 
 </div>
