--- a/Portfolio.html
+++ b/Portfolio.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="container">
-        <nav>
+        <nav class="site-navp">
                 <a href="/" class="logop"> <span class="webp"> WEB </span> STUDIO </a>
     </a>
     <ul class="buttonsp">
@@ -19,11 +19,11 @@
         <li><a href="./Portfolio.html" class="buttonsp">Portfolio</a></li>
         <li><a href="" class="buttonsp">Contacts</a></li>
     </ul>
-    </nav>
     <ul class="addressp">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
         <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a> </li>
     </ul>
+</nav>
     </header>
 
 
@@ -31,12 +31,12 @@
 
 <main class="container">
     <section>
-<ul>
-    <li> <button type="button" class="buttonstack">All</button></li>
-    <li> <button type="button" class="buttonstack">Web site</button></li>
-    <li> <button type="button" class="buttonstack">App</button></li>
-    <li> <button type="button" class="buttonstack">Design</button></li>
-    <li> <button type="button" class="buttonstack">Marketing</button></li>
+<ul class="buttonstack">
+    <li class="btnmr"> <button type="button" class="buttonstack">All</button></li>
+    <li class="btnmr"> <button type="button" class="buttonstack">Web site</button></li>
+    <li class="btnmr"> <button type="button" class="buttonstack">App</button></li>
+    <li class="btnmr"> <button type="button" class="buttonstack">Design</button></li>
+    <li class="btnmr"> <button type="button" class="buttonstack">Marketing</button></li>
 </ul>
 
 <ul class="images">
