--- a/Portfolio.html
+++ b/Portfolio.html
@@ -31,24 +31,24 @@
 
 <main class="container">
     <section>
-<ul class="buttonstack">
-    <li class="btnmr"> <button type="button" class="buttonstack">All</button></li>
-    <li class="btnmr"> <button type="button" class="buttonstack">Web site</button></li>
-    <li class="btnmr"> <button type="button" class="buttonstack">App</button></li>
-    <li class="btnmr"> <button type="button" class="buttonstack">Design</button></li>
-    <li class="btnmr"> <button type="button" class="buttonstack">Marketing</button></li>
+<ul class="buttonline">
+    <li class="buttonstack"> <button type="button" class="buttonstack">All</button></li>
+    <li class="buttonstack"> <button type="button" class="buttonstack">Web site</button></li>
+    <li class="buttonstack"> <button type="button" class="buttonstack">App</button></li>
+    <li class="buttonstack"> <button type="button" class="buttonstack">Design</button></li>
+    <li class="buttonstack"> <button type="button" class="buttonstack" width="126px">Marketing</button></li>
 </ul>
 
 <ul class="images">
-    <li> <img src="./images/img.jpg" alt="No photo"> <h2 class="name">Banking App Interface Concept</h2><p class="description">App</p></li>
-    <li><img src="./images/bgcolor.jpg" alt="No photo"><p class="text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p> <h2 class="name">Cashless Payment</h2><p class="description">Marketing</p></li>
-    <li> <img src="./images/img-2.jpg" alt="No photo"><h2 class="name">Meditaion App</h2><p class="description">App</p></li>
-    <li> <img src="./images/img-3.jpg" alt="No photo"><h2 class="name">Taxi Service</h2><p class="description">Marketing</p></li>
-    <li> <img src="./images/img-4.jpg" alt="No photo"><h2 class="name">Screen Illustrations</h2><p class="description">Design</p></li>
-    <li> <img src="./images/img-5.jpg" alt="No photo"><h2 class="name">Online Courses</h2><p class="description">Marketing</p></li>
-    <li> <img src="./images/img-6.jpg" alt="No photo"><h2 class="name">Instagram Stories Concept</h2><p class="description">Design</p></li>
-    <li> <img src="./images/img-7.jpg" alt="No photo"><h2 class="name">Organic Food</h2><p class="description">Web Site</p></li>
-    <li> <img src="./images/img-8.jpg" alt="No photo"><h2 class="name">Fresh Coffee</h2><p class="description">Web Site</p></li>
+    <li class="imagesbasis"> <img src="./images/img.jpg" alt="No photo"> <h2 class="name">Banking App Interface <br>Concept </h2><p class="description">App</p></li>
+    <li class="imagesbasis"><img src="./images/bgcolor.jpg" alt="No photo"><p class="text"></h2><p class="description">Marketing</p></li>
+    <li class="imagesbasis"> <img src="./images/img-2.jpg" alt="No photo"><h2 class="name">Meditaion App</h2><p class="description">App</p></li>
+    <li class="imagesbasis"> <img src="./images/img-3.jpg" alt="No photo"><h2 class="name">Taxi Service</h2><p class="description">Marketing</p></li>
+    <li class="imagesbasis"> <img src="./images/img-4.jpg" alt="No photo"><h2 class="name">Screen Illustrations</h2><p class="description">Design</p></li>
+    <li class="imagesbasis"> <img src="./images/img-5.jpg" alt="No photo"><h2 class="name">Online Courses</h2><p class="description">Marketing</p></li>
+    <li class="imagesbasis"> <img src="./images/img-6.jpg" alt="No photo"><h2 class="name">Instagram Stories Concept</h2><p class="description">Design</p></li>
+    <li class="imagesbasis"> <img src="./images/img-7.jpg" alt="No photo"><h2 class="name">Organic Food</h2><p class="description">Web Site</p></li>
+    <li class="imagesbasis"> <img src="./images/img-8.jpg" alt="No photo"><h2 class="name">Fresh Coffee</h2><p class="description">Web Site</p></li>
 </ul>
 </section>
 </main>
