--- a/Portfolio.html
+++ b/Portfolio.html
@@ -12,10 +12,10 @@
 <body>
     <header class="container">
         <nav class="site-navp">
-                <a href="/" class="logop"> <span class="webp"> WEB </span> STUDIO </a>
+                <a href="./index.html" class="logop"> <span class="webp"> WEB </span> STUDIO </a>
     </a>
     <ul class="buttonsp">
-        <li><a href="https://giovanniauditore.github.io/goit-markup-hw-02/" class="buttonsp">Studio</a></li>
+        <li><a href="./index.html" class="buttonsp">Studio</a></li>
         <li><a href="./Portfolio.html" class="buttonsp">Portfolio</a></li>
         <li><a href="" class="buttonsp">Contacts</a></li>
     </ul>
