--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
     <section class="container">
     <nav class="site-nav">
-            <a href="/" class="logo"> <span class="web"> WEB </span> STUDIO </a>
+            <a href="./index.html" class="logo"> <span class="web"> WEB </span> STUDIO </a>
 </a>
 <ul class="buttons">
     <li><a href="./index.html" class="buttons">Studio</a></li>
