--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
 <header>
-    <section class="container">
+    <div class="container" class="paddingtop">
     <nav class="site-nav">
             <a href="./index.html" class="logo"> <span class="web"> WEB </span> STUDIO </a>
 </a>
 <ul class="buttons">
-    <li><a href="./index.html" class="buttons">Studio</a></li>
-    <li><a href="./Portfolio.html" class="buttons">Portfolio</a></li>
-    <li><a href="" class="buttons">Contacts</a></li>
+    <li class="buttonstop"><a href="./index.html" class="buttons">Studio</a></li>
+    <li class="buttonstop"><a href="./Portfolio.html" class="buttons">Portfolio</a></li>
+    <li class="buttonstop"><a href="" class="buttons">Contacts</a></li>
 </ul>
 
 <ul class="address">
@@ -25,7 +25,7 @@
     <li class="makeflex"><a href="tel:+11 (000) 111-11-11" class="address">+11 (000) 111-11-11</a> </li>
 </ul>
 </nav>
-</section>
+</div>
 </header>
 
 <main>
@@ -39,9 +39,9 @@
 
 
 
-<div class="container">
-<section class="textmarginbot">
 
+<section class="textmarginbot">
+    <div class="container">
 <ul class="block">
     <li class="blockwdt">
        <h3 class="maintext">Strategy</h3>
@@ -67,7 +67,8 @@
 </div>
 
 <div class="container">
-<h2 class="question">What are we doing</h2>
+    <section class="question">
+<h2 class="questiontext">What are we doing</h2>
 <ul class="imagesforquestion">
     <li class="imagesforquestion"><img src="images/Rectangle 71.jpeg" alt="site photo" width="360" height="300" ></li>
     <li class="imagesforquestion"><img src="images/Rectangle 71-2.jpeg" alt="site photo" width="360" height="300"></li>
