--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 </header>
 
 <main>
-    <div class="effectivesection">
-    <section  class="container">
+    
+    <section  class="effectivesection">
+        <div class="container">
 <h1 class="bigtext">Effective Solutions <br> for Your Business</h1>
 
 <button type="button" class="orderbtn">Order Service</button>
@@ -44,21 +45,18 @@
     <div class="container">
 <ul class="block">
     <li class="blockwdt">
-       <h3 class="maintext">Strategy</h3>
-       <p class="minortext">Our goal is to identify the business
+        <h3 class="maintext">Strategy</h3>
+        <p class="minortext">Our goal is to identify the business
         problem to walk away with the perfect and creative solution. </p>
     </li>
-
     <li class="blockwdt">
         <h3 class="maintext">Punctuality</h3>
         <p class="minortext">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
     </li>
-
     <li class="blockwdt">
         <h3 class="maintext">Diligence</h3>
         <p class="minortext">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
     </li>
-
     <li class="blockwdt">
         <h3 class="maintext">Technologies</h3>
         <p class="minortext">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
@@ -66,8 +64,9 @@
 </ul>
 </div>
 
-<div class="container">
+
     <section class="question">
+        <div class="container">
 <h2 class="questiontext">What are we doing</h2>
 <ul class="imagesforquestion">
     <li class="imagesforquestion"><img src="images/Rectangle 71.jpeg" alt="site photo" width="360" height="300" ></li>
@@ -77,7 +76,7 @@
 </section>
 </div>
 
-<section class="cloud" >
+<section class="cloud">
 <div class="container">
 <h2 class="cloudtext">Our Team</h2>
 
