--- a/Portfolio.html
+++ b/Portfolio.html
@@ -32,11 +32,11 @@
 <main class="container">
     <section>
 <ul class="buttonline">
-    <li class="buttonstack"> <button type="button" class="buttonstack">All</button></li>
-    <li class="buttonstack"> <button type="button" class="buttonstack">Web site</button></li>
-    <li class="buttonstack"> <button type="button" class="buttonstack">App</button></li>
-    <li class="buttonstack"> <button type="button" class="buttonstack">Design</button></li>
-    <li class="buttonstack"> <button type="button" class="buttonstack" width="126px">Marketing</button></li>
+    <li> <button type="button" class="buttonstack">All</button></li>
+    <li> <button type="button" class="buttonstack">Web site</button></li>
+    <li> <button type="button" class="buttonstack">App</button></li>
+    <li> <button type="button" class="buttonstack">Design</button></li>
+    <li><button type="button" class="buttonstack" width="126px">Marketing</button></li>
 </ul>
 
 <ul class="images">
