--- a/Portfolio.html
+++ b/Portfolio.html
@@ -40,15 +40,15 @@
 </ul>
 
 <ul class="images">
-    <li class="imagesbasis"> <img src="./images/img.jpg" alt="No photo"> <h2 class="name">Banking App Interface <br>Concept </h2><p class="description">App</p></li>
-    <li class="imagesbasis"><img src="./images/bgcolor.jpg" alt="No photo"><p class="text"></h2><p class="description">Marketing</p></li>
-    <li class="imagesbasis"> <img src="./images/img-2.jpg" alt="No photo"><h2 class="name">Meditaion App</h2><p class="description">App</p></li>
-    <li class="imagesbasis"> <img src="./images/img-3.jpg" alt="No photo"><h2 class="name">Taxi Service</h2><p class="description">Marketing</p></li>
-    <li class="imagesbasis"> <img src="./images/img-4.jpg" alt="No photo"><h2 class="name">Screen Illustrations</h2><p class="description">Design</p></li>
-    <li class="imagesbasis"> <img src="./images/img-5.jpg" alt="No photo"><h2 class="name">Online Courses</h2><p class="description">Marketing</p></li>
-    <li class="imagesbasis"> <img src="./images/img-6.jpg" alt="No photo"><h2 class="name">Instagram Stories Concept</h2><p class="description">Design</p></li>
-    <li class="imagesbasis"> <img src="./images/img-7.jpg" alt="No photo"><h2 class="name">Organic Food</h2><p class="description">Web Site</p></li>
-    <li class="imagesbasis"> <img src="./images/img-8.jpg" alt="No photo"><h2 class="name">Fresh Coffee</h2><p class="description">Web Site</p></li>
+    <li class="imagesbasis"> <img src="./images/img.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Banking App Interface Concept </h2><p class="description">App</p></div></li>
+    <li class="imagesbasis"><img src="./images/bgcolor.jpg" alt="No photo"> <div class="imagesdiv"><p class="text"></h2><p class="description">Marketing</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-2.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Meditaion App</h2><p class="description">App</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-3.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Taxi Service</h2><p class="description">Marketing</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-4.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Screen Illustrations</h2><p class="description">Design</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-5.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Online Courses</h2><p class="description">Marketing</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-6.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Instagram Stories Concept</h2><p class="description">Design</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-7.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Organic Food</h2><p class="description">Web Site</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-8.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Fresh Coffee</h2><p class="description">Web Site</p></div></li>
 </ul>
 </section>
 </main>
