--- a/Portfolio.html
+++ b/Portfolio.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="container">
-        
+    <header class="containertop">
+        <div class="container">
         <nav class="site-navp">
                 <a href="./index.html" class="logop"> <span class="webp"> WEB </span> STUDIO </a>
     <ul class="buttonsp">
@@ -19,11 +19,12 @@
         <li><a href="./Portfolio.html" class="buttonsp">Portfolio</a></li>
         <li><a href="" class="buttonsp">Contacts</a></li>
     </ul>
+</nav>
     <ul class="addressp">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
         <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a> </li>
     </ul>
-</nav>
+</div>
     </header>
 
 
