--- a/index.html
+++ b/index.html
@@ -9,22 +9,20 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<header>
-    <div class="container" class="paddingtop">
+<header class="containertop">
+    <div class="container" class="flextop">
     <nav class="site-nav">
             <a href="./index.html" class="logo"> <span class="web"> WEB </span> STUDIO </a>
-</a>
 <ul class="buttons">
     <li class="buttonstop"><a href="./index.html" class="buttons">Studio</a></li>
     <li class="buttonstop"><a href="./Portfolio.html" class="buttons">Portfolio</a></li>
     <li class="buttonstop"><a href="" class="buttons">Contacts</a></li>
 </ul>
-
-<ul class="address">
-    <li class="makeflex"><a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a> </li>
-    <li class="makeflex"><a href="tel:+11 (000) 111-11-11" class="address">+11 (000) 111-11-11</a> </li>
-</ul>
 </nav>
+<ul class="address">
+    <li class="makeflex"><a href="mailto:info@devstudio.com" class="addressstr">info@devstudio.com</a> </li>
+    <li class="makeflex"><a href="tel:+11 (000) 111-11-11" class="addresstel">+11 (000) 111-11-11</a> </li>
+</ul>
 </div>
 </header>
 
@@ -62,6 +60,7 @@
         <p class="minortext">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
     </li>
 </ul>
+</section>
 </div>
 
 
@@ -90,10 +89,11 @@
 </div>
 </section>
 </main>
-<footer class="foot">
+<section class="colorfoot">
+<footer class="containerfoot" >
     <a href="/" class="footlogo"> <span class="web"> WEB </span> STUDIO </a>
 <p class="foottext">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
-
+</section>
 </body>
 </html>
