--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header class="containertop">
-    <div class="container" class="flextop">
+    <div class="container" style="display: flex;">
     <nav class="site-nav">
             <a href="./index.html" class="logo"> <span class="web"> WEB </span> STUDIO </a>
 <ul class="buttons">
