--- a/Portfolio.html
+++ b/Portfolio.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="containertop">
-        <div class="container">
+        <div class="container" style="display: flex;" >
         <nav class="site-navp">
                 <a href="./index.html" class="logop"> <span class="webp"> WEB </span> STUDIO </a>
     <ul class="buttonsp">
@@ -42,7 +42,7 @@
 
 <ul class="images">
     <li class="imagesbasis"> <img src="./images/img.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Banking App Interface Concept </h2><p class="description">App</p></div></li>
-    <li class="imagesbasis"><img src="./images/bgcolor.jpg" alt="No photo"> <div class="imagesdiv"><p class="text"></h2><p class="description">Marketing</p></div></li>
+    <li class="imagesbasis"><img src="./images/bgcolor.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Cashless Payment</h2><p class="description">Marketing</p></div></li>
     <li class="imagesbasis"> <img src="./images/img-2.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Meditaion App</h2><p class="description">App</p></div></li>
     <li class="imagesbasis"> <img src="./images/img-3.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Taxi Service</h2><p class="description">Marketing</p></div></li>
     <li class="imagesbasis"> <img src="./images/img-4.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Screen Illustrations</h2><p class="description">Design</p></div></li>
@@ -53,9 +53,13 @@
 </ul>
 </section>
 </main>
+<section class="colorfooterlogo">
+<div class="container">
 <footer class="footp">
     <a href="/" class="footlogop"> <span class="webp"> WEB </span> STUDIO </a>
     <p class="foottextp">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
+</div>
+</section>
 </body>
 </html>
