--- a/Portfolio.html
+++ b/Portfolio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="containertop">
+    <header class="containertopp">
         <div class="container" style="display: flex;" >
         <nav class="site-navp">
                 <a href="./index.html" class="logop"> <span class="webp"> WEB </span> STUDIO </a>
@@ -41,15 +41,15 @@
 </ul>
 
 <ul class="images">
-    <li class="imagesbasis"> <img src="./images/img.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Banking App Interface Concept </h2><p class="description">App</p></div></li>
-    <li class="imagesbasis"><img src="./images/bgcolor.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Cashless Payment</h2><p class="description">Marketing</p></div></li>
-    <li class="imagesbasis"> <img src="./images/img-2.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Meditaion App</h2><p class="description">App</p></div></li>
-    <li class="imagesbasis"> <img src="./images/img-3.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Taxi Service</h2><p class="description">Marketing</p></div></li>
-    <li class="imagesbasis"> <img src="./images/img-4.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Screen Illustrations</h2><p class="description">Design</p></div></li>
-    <li class="imagesbasis"> <img src="./images/img-5.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Online Courses</h2><p class="description">Marketing</p></div></li>
-    <li class="imagesbasis"> <img src="./images/img-6.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Instagram Stories Concept</h2><p class="description">Design</p></div></li>
-    <li class="imagesbasis"> <img src="./images/img-7.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Organic Food</h2><p class="description">Web Site</p></div></li>
-    <li class="imagesbasis"> <img src="./images/img-8.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="name">Fresh Coffee</h2><p class="description">Web Site</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Banking App Interface Concept </h2><p class="description">App</p></div></li>
+    <li class="imagesbasis"><img src="./images/bgcolor.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Cashless Payment</h2><p class="description">Marketing</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-2.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Meditaion App</h2><p class="description">App</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-3.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Taxi Service</h2><p class="description">Marketing</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-4.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Screen Illustrations</h2><p class="description">Design</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-5.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Online Courses</h2><p class="description">Marketing</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-6.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Instagram Stories Concept</h2><p class="description">Design</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-7.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Organic Food</h2><p class="description">Web Site</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-8.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Fresh Coffee</h2><p class="description">Web Site</p></div></li>
 </ul>
 </section>
 </main>
