--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 <h2 class="cloudtext">Our Team</h2>
 
 <ul class="botimages">
-    <li><img src="images/img.jpeg" alt="Employee" width="264" height="260"> <h3 class="name">Mark Guerrero</h3><p class="job">Product Designer</p></li>
-    <li><img src="images/img-2.jpeg" alt="Employee" width="264" height="260"><h3 class="name">Tom Ford</h3><p class="job">Frontend Developer</p></li>
-    <li><img src="images/img-3.jpeg" alt="Employee" width="264" height="260"><h3 class="name">Camila Garcia</h3><p class="job">Marketing</p></li>
-    <li><img src="images/img-4.jpeg" alt="Employee"width="264" height="260"><h3 class="name">Daniel Wilson</h3><p class="job">UI Designer</p></li>
+    <li><img src="images/img.jpeg" alt="Employee" width="264" height="260"> <div class="paddingcloud"><h3 class="name">Mark Guerrero</h3><p class="job">Product Designer</p></div></li>
+    <li><img src="images/img-2.jpeg" alt="Employee" width="264" height="260"><div class="paddingcloud"><h3 class="name">Tom Ford</h3><p class="job">Frontend Developer</p></div></li>
+    <li><img src="images/img-3.jpeg" alt="Employee" width="264" height="260"><div class="paddingcloud"><h3 class="name">Camila Garcia</h3><p class="job">Marketing</p></div></li>
+    <li><img src="images/img-4.jpeg" alt="Employee"width="264" height="260"><div class="paddingcloud"><h3 class="name">Daniel Wilson</h3><p class="job">UI Designer</p></div></li>
 </ul>
 
 </div>
@@ -91,7 +91,7 @@
 </main>
 <section class="colorfoot">
 <footer class="containerfoot" >
-    <a href="/" class="footlogo"> <span class="web"> WEB </span> STUDIO </a>
+    <a href="https://giovanniauditore.github.io/goit-markup-hw-03/" class="footlogo"> <span class="web"> WEB </span> STUDIO </a>
 <p class="foottext">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </section>
