--- a/Portfolio.html
+++ b/Portfolio.html
@@ -29,9 +29,9 @@
 
 
 
+    <section class="herop">
+<div class="container">
 
-<main class="container">
-    <section>
 <ul class="buttonline">
     <li> <button type="button" class="buttonstack">All</button></li>
     <li> <button type="button" class="buttonstack">Web site</button></li>
@@ -52,11 +52,11 @@
     <li class="imagesbasis"> <img src="./images/img-8.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Fresh Coffee</h2><p class="description">Web Site</p></div></li>
 </ul>
 </section>
-</main>
+</div>
 <section class="colorfooterlogo">
 <div class="container">
-<footer class="footp">
-    <a href="/" class="footlogop"> <span class="webp"> WEB </span> STUDIO </a>
+<footer>
+    <a href="/" class="footlogop"> <span class="webp"> WEB </span> <span class="studiop"> STUDIO</span></a>
     <p class="foottextp">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </div>
