--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </main>
 <section class="colorfoot">
 <footer class="containerfoot" >
-    <a href="https://giovanniauditore.github.io/goit-markup-hw-03/" class="footlogo"> <span class="web"> WEB </span> STUDIO </a>
+    <a href="/" class="footlogo"> <span class="web"> WEB </span> <span class="studio"> STUDIO </span> </a>
 <p class="foottext">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </section>
