--- a/Portfolio.html
+++ b/Portfolio.html
@@ -28,7 +28,7 @@
     </header>
 
 
-
+<main>
     <section class="herop">
 <div class="container">
 
@@ -53,13 +53,12 @@
 </ul>
 </section>
 </div>
-<section class="colorfooterlogo">
-<div class="container">
-<footer>
+</main>
+<footer class="colorfooterlogo">
+    <div class="container">
     <a href="/" class="footlogop"> <span class="webp"> WEB </span> <span class="studiop"> STUDIO</span></a>
     <p class="foottextp">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </div>
-</section>
 </body>
 </html>
