--- a/index.html
+++ b/index.html
@@ -10,57 +10,66 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<header class="containertop">
-    <div class="container" style="display: flex;">
-    <nav class="site-nav">
-            <a href="./index.html" class="logo"> <span class="web"> WEB </span> STUDIO </a>
-<ul class="buttons">
-    <li class="buttonstop"><a href="./index.html" class="buttons">Studio</a></li>
-    <li class="buttonstop"><a href="./Portfolio.html" class="buttons">Portfolio</a></li>
-    <li class="buttonstop"><a href="" class="buttons">Contacts</a></li>
-</ul>
-</nav>
-<ul class="address">
-    <li class="makeflex"><a href="mailto:info@devstudio.com" class="addressstr">info@devstudio.com</a> </li>
-    <li class="makeflex"><a href="tel:+11 (000) 111-11-11" class="addresstel">+11 (000) 111-11-11</a> </li>
-</ul>
-</div>
-</header>
+    <header class="containertop">
+        <div class="container" style="display: flex;">
+            <nav class="site-nav">
+                <a href="./index.html" class="logo"> <span class="web"> WEB </span> STUDIO </a>
+                <ul class="button-list">
+                    <li class="button-item"><a href="./index.html" class="button active">Studio</a></li>
+                    <li class="button-item"><a href="./Portfolio.html" class="button">Portfolio</a></li>
+                    <li class="button-item"><a href="" class="button">Contacts</a></li>
+                </ul>
+            </nav>
+            <ul class="address">
+                <li class="makeflex"><a href="mailto:info@devstudio.com" class="addressstr">info@devstudio.com</a> </li>
+                <li class="makeflex"><a href="tel:+11 (000) 111-11-11" class="addresstel">+11 (000) 111-11-11</a> </li>
+            </ul>
+        </div>
+    </header>
 
-<main>
-    
-    <section  class="effectivesection">
-        <div class="container">
-<h1 class="bigtext">Effective Solutions <br> for Your Business</h1>
+    <main>
+        <section  class="effectivesection">
+            <div class="container">
+                <h1 class="bigtext">Effective Solutions <br> for Your Business</h1>
+                <button type="button" class="orderbtn">Order Service</button>
+            </div>
+        </section> 
 
-<button type="button" class="orderbtn">Order Service</button>
-    </section> 
-</div>
-
-
-
-
-<section class="textmarginbot">
-    <div class="container">
-<ul class="block">
+        <section class="textmarginbot">
+            <div class="container">
+                <ul class="block">
+                    <li class="blockwdt">
+                        <div class="block-icon">
+                            <svg class="block-icon-item" weight="64px" height="64px">
+                                <use href="./images/Web Studio (Version 5.0)/icons.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
+                        <h3 class="maintext">Strategy</h3>
+                        <p class="minortext">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                    </li>
     <li class="blockwdt">
-        <h3 class="maintext">Strategy</h3>
-        <p class="minortext">Our goal is to identify the business
-        problem to walk away with the perfect and creative solution. </p>
-    </li>
-    <li class="blockwdt">
+        <div class = "block-icon"><svg class="block-icon-item" weight="64px" height="64px">
+            <use href="./images/Web Studio (Version 5.0)/icons.svg#icon-clock"></use>
+        </svg></div>
         <h3 class="maintext">Punctuality</h3>
         <p class="minortext">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
     </li>
     <li class="blockwdt">
+        <div class = "block-icon"><svg class="block-icon-item" weight="64px" height="64px">
+            <use href="./images/Web Studio (Version 5.0)/icons.svg#icon-diagram"></use>
+        </svg></div>
         <h3 class="maintext">Diligence</h3>
         <p class="minortext">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
     </li>
     <li class="blockwdt">
+        <div class = "block-icon"><svg class="block-icon-item" weight="64px" height="64px">
+            <use href="./images/Web Studio (Version 5.0)/icons.svg#icon-astronaut"></use>
+        </svg></div>
         <h3 class="maintext">Technologies</h3>
         <p class="minortext">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
     </li>
 </ul>
+</div>
 </section>
 </div>
 
@@ -69,22 +78,170 @@
         <div class="container">
 <h2 class="questiontext">What are we doing</h2>
 <ul class="imagesforquestion">
-    <li class="imagesforquestion"><img src="images/Rectangle 71.jpeg" alt="site photo" width="360" height="300" ></li>
-    <li class="imagesforquestion"><img src="images/Rectangle 71-2.jpeg" alt="site photo" width="360" height="300"></li>
-    <li class="imagesforquestion"><img src="images/Rectangle 71-3.jpeg" alt="site photo" width="360" height="300"></li>
+    <li class="imagesforquestioncard"><img src="images/Rectangle 71.jpeg" alt="site photo" width="360" height="300" ></li>
+    <li class="imagesforquestioncard"><img src="images/Rectangle 71-2.jpeg" alt="site photo" width="360" height="300"></li>
+    <li class="imagesforquestioncard"><img src="images/Rectangle 71-3.jpeg" alt="site photo" width="360" height="300"></li>
 </ul>
 </section>
-</div>
+        </div>
 
 <section class="cloud">
 <div class="container">
 <h2 class="cloudtext">Our Team</h2>
 
 <ul class="botimages">
-    <li><img src="images/img.jpeg" alt="Employee" width="264" height="260"> <div class="paddingcloud"><h3 class="name">Mark Guerrero</h3><p class="job">Product Designer</p></div></li>
-    <li><img src="images/img-2.jpeg" alt="Employee" width="264" height="260"><div class="paddingcloud"><h3 class="name">Tom Ford</h3><p class="job">Frontend Developer</p></div></li>
-    <li><img src="images/img-3.jpeg" alt="Employee" width="264" height="260"><div class="paddingcloud"><h3 class="name">Camila Garcia</h3><p class="job">Marketing</p></div></li>
-    <li><img src="images/img-4.jpeg" alt="Employee"width="264" height="260"><div class="paddingcloud"><h3 class="name">Daniel Wilson</h3><p class="job">UI Designer</p></div></li>
+    <li class="employeecard">
+        <img src="images/img.jpeg" alt="Employee" width="264" height="260">
+        <div class="paddingcloud">
+            <h3 class="name">Mark Guerrero</h3>
+            <p class="job">Product Designer</p>
+            <ul class="social">
+                <li class="social-icon">
+                    <a href="" class="social-icon-link">
+                        <svg class="social-icon-color" width="16px" height="16px">
+                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-icon">
+                    <a href="" class="social-icon-link">
+                        <svg class="social-icon-color" width="16px" height="16px">
+                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-icon">
+                    <a href="" class="social-icon-link">
+                        <svg class="social-icon-color" width="16px" height="16px">
+                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-icon">
+                    <a href="" class="social-icon-link">
+                        <svg class="social-icon-color" width="16px" height="16px">
+                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </li>
+
+    </div></li>
+        <li class="employeecard">
+            <img src="images/img-2.jpeg" alt="Employee" width="264" height="260">
+            <div class="paddingcloud">
+                <h3 class="name">Tom Ford</h3>
+                <p class="job">Frontend Developer</p>
+                <ul class="social">
+                    <li class="social-icon">
+                        <a href="" class="social-icon-link">
+                            <svg class="social-icon-color" width="16px" height="16px">
+                                <use href="images/Web Studio (Version 5.0)/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icon">
+                        <a href="" class="social-icon-link">
+                            <svg class="social-icon-color" width="16px" height="16px">
+                                <use href="images/Web Studio (Version 5.0)/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icon">
+                        <a href="" class="social-icon-link">
+                            <svg class="social-icon-color" width="16px" height="16px">
+                                <use href="images/Web Studio (Version 5.0)/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icon">
+                        <a href="" class="social-icon-link">
+                            <svg class="social-icon-color" width="16px" height="16px">
+                                <use href="images/Web Studio (Version 5.0)/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </li>
+        <!-- Вставь сюда остальные блоки для Camila Garcia и Daniel Wilson -->
+    <li class="employeecard">
+        <img src="images/img-3.jpeg" alt="Employee" width="264" height="260">
+        <div class="paddingcloud">
+            <h3 class="name">Camila Garcia</h3>
+            <p class="job">Marketing</p>
+            <ul class="social">
+                <li class="social-icon">
+                    <a href="" class="social-icon-link">
+                        <svg class="social-icon-color" width="16px" height="16px">
+                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-icon">
+                    <a href="" class="social-icon-link">
+                        <svg class="social-icon-color" width="16px" height="16px">
+                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-icon">
+                    <a href="" class="social-icon-link">
+                        <svg class="social-icon-color" width="16px" height="16px">
+                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-icon">
+                    <a href="" class="social-icon-link">
+                        <svg class="social-icon-color" width="16px" height="16px">
+                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </li>
+    
+    <li class="employeecard">
+        <img src="images/img-4.jpeg" alt="Employee" width="264" height="260">
+        <div class="paddingcloud">
+            <h3 class="name">Daniel Wilson</h3>
+            <p class="job">UI Designer</p>
+            <ul class="social">
+                <li class="social-icon">
+                    <a href="" class="social-icon-link">
+                        <svg class="social-icon-color" width="16px" height="16px">
+                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-icon">
+                    <a href="" class="social-icon-link">
+                        <svg class="social-icon-color" width="16px" height="16px">
+                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-icon">
+                    <a href="" class="social-icon-link">
+                        <svg class="social-icon-color" width="16px" height="16px">
+                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-icon">
+                    <a href="" class="social-icon-link">
+                        <svg class="social-icon-color" width="16px" height="16px">
+                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </li>
 </ul>
 
 </div>
@@ -94,6 +251,40 @@
     <div class="container">
     <a href="/" class="footlogo"> <span class="web"> WEB </span> <span class="studio"> STUDIO </span> </a>
 <p class="foottext">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+
+<div>
+    <ul class="social">
+        <li class="social-icon">
+            <a href="" class="social-icon-link">
+                <svg class="social-icon-color" width="16px" height="16px">
+                    <use href="images/Web Studio (Version 5.0)/icons.svg#icon-facebook"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="social-icon">
+            <a href="" class="social-icon-link">
+                <svg class="social-icon-color" width="16px" height="16px">
+                    <use href="images/Web Studio (Version 5.0)/icons.svg#icon-instagram"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="social-icon">
+            <a href="" class="social-icon-link">
+                <svg class="social-icon-color" width="16px" height="16px">
+                    <use href="images/Web Studio (Version 5.0)/icons.svg#icon-twitter"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="social-icon">
+            <a href="" class="social-icon-link">
+                <svg class="social-icon-color" width="16px" height="16px">
+                    <use href="images/Web Studio (Version 5.0)/icons.svg#icon-linkedin"></use>
+                </svg>
+            </a>
+        </li>
+    </ul>
+</ul>
+</div>
 </footer>
 </div>
 </body>
