--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header class="containertopp">
-        <div class="container" style="display: flex;" >
-        <nav class="site-navp">
+        <div class="container" style="display: flex;">
+            <nav class="site-navp">
                 <a href="./index.html" class="logop"> <span class="webp"> WEB </span> STUDIO </a>
-    <ul class="buttonsp">
-        <li><a href="./index.html" class="buttonsp">Studio</a></li>
-        <li><a href="./Portfolio.html" class="buttonsp">Portfolio</a></li>
-        <li><a href="" class="buttonsp">Contacts</a></li>
-    </ul>
-</nav>
-    <ul class="addressp">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-        <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a> </li>
-    </ul>
-</div>
+                <ul class="buttonsp">
+                    <li><a href="./index.html" class="buttonsp">Studio</a></li>
+                    <li><a href="./Portfolio.html" class="buttonsp">Portfolio</a></li>
+                    <li><a href="" class="buttonsp">Contacts</a></li>
+                </ul>
+            </nav>
+
+            <ul class="addressp">
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a> </li>
+            </ul>
+        </div>
     </header>
 
-
-<main>
-    <section class="herop">
-<div class="container">
-
-<ul class="buttonline">
-    <li> <button type="button" class="buttonstack">All</button></li>
-    <li> <button type="button" class="buttonstack">Web site</button></li>
-    <li> <button type="button" class="buttonstack">App</button></li>
-    <li> <button type="button" class="buttonstack">Design</button></li>
-    <li><button type="button" class="buttonstack" width="126px">Marketing</button></li>
-</ul>
-
+    <main>
+        <section class="herop">
+            <div class="container">
+                <ul class="buttonline">
+                    <li><button type="button" class="buttonstack">All</button></li>
+                    <li><button type="button" class="buttonstack">Web site</button></li>
+                    <li><button type="button" class="buttonstack">App</button></li>
+                    <li><button type="button" class="buttonstack">Design</button></li>
+                    <li><button type="button" class="buttonstack" width="126px">Marketing</button></li>
+                </ul>
+            
 <ul class="images">
     <li class="imagesbasis"> <img src="./images/img.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Banking App Interface Concept </h2><p class="description">App</p></div></li>
     <li class="imagesbasis"><img src="./images/bgcolor.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Cashless Payment</h2><p class="description">Marketing</p></div></li>
@@ -56,9 +59,10 @@
 </main>
 <footer class="colorfooterlogo">
     <div class="container">
-    <a href="/" class="footlogop"> <span class="webp"> WEB </span> <span class="studiop"> STUDIO</span></a>
-    <p class="foottextp">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <a href="/" class="footlogop"> <span class="webp"> WEB </span> <span class="studiop"> STUDIO</span></a>
+        <p class="foottextp">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </div>
 </footer>
-</div>
 </body>
+
 </html>
