--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </nav>
             <ul class="address">
                 <li class="makeflex"><a href="mailto:info@devstudio.com" class="addressstr">info@devstudio.com</a> </li>
-                <li class="makeflex"><a href="tel:+11 (000) 111-11-11" class="addresstel">+11 (000) 111-11-11</a> </li>
+                <li class="makeflex"><a href="tel:+11 (000) 111-11-11" class="addresstel">+110001111111</a> </li>
             </ul>
         </div>
     </header>
@@ -40,7 +40,7 @@
                 <ul class="block">
                     <li class="blockwdt">
                         <div class="block-icon">
-                            <svg class="block-icon-item" weight="64px" height="64px">
+                            <svg class="block-icon-item" wight="64px" height="64px">
                                 <use href="./images/Web Studio (Version 5.0)/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
@@ -48,21 +48,21 @@
                         <p class="minortext">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                     </li>
     <li class="blockwdt">
-        <div class = "block-icon"><svg class="block-icon-item" weight="64px" height="64px">
+        <div class = "block-icon"><svg class="block-icon-item" width="64px" height="64px">
             <use href="./images/Web Studio (Version 5.0)/icons.svg#icon-clock"></use>
         </svg></div>
         <h3 class="maintext">Punctuality</h3>
         <p class="minortext">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
     </li>
     <li class="blockwdt">
-        <div class = "block-icon"><svg class="block-icon-item" weight="64px" height="64px">
+        <div class = "block-icon"><svg class="block-icon-item" wight="64px" height="64px">
             <use href="./images/Web Studio (Version 5.0)/icons.svg#icon-diagram"></use>
         </svg></div>
         <h3 class="maintext">Diligence</h3>
         <p class="minortext">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
     </li>
     <li class="blockwdt">
-        <div class = "block-icon"><svg class="block-icon-item" weight="64px" height="64px">
+        <div class = "block-icon"><svg class="block-icon-item" wight="64px" height="64px">
             <use href="./images/Web Studio (Version 5.0)/icons.svg#icon-astronaut"></use>
         </svg></div>
         <h3 class="maintext">Technologies</h3>
@@ -71,19 +71,8 @@
 </ul>
 </div>
 </section>
-</div>
 
 
-    <section class="question">
-        <div class="container">
-<h2 class="questiontext">What are we doing</h2>
-<ul class="imagesforquestion">
-    <li class="imagesforquestioncard"><img src="images/Rectangle 71.jpeg" alt="site photo" width="360" height="300" ></li>
-    <li class="imagesforquestioncard"><img src="images/Rectangle 71-2.jpeg" alt="site photo" width="360" height="300"></li>
-    <li class="imagesforquestioncard"><img src="images/Rectangle 71-3.jpeg" alt="site photo" width="360" height="300"></li>
-</ul>
-</section>
-        </div>
 
 <section class="cloud">
 <div class="container">
@@ -128,7 +117,6 @@
         </div>
     </li>
 
-    </div></li>
         <li class="employeecard">
             <img src="images/img-2.jpeg" alt="Employee" width="264" height="260">
             <div class="paddingcloud">
@@ -283,9 +271,8 @@
             </a>
         </li>
     </ul>
-</ul>
+</div>
 </div>
 </footer>
-</div>
 </body>
 </html>
