--- a/index.html
+++ b/index.html
@@ -236,11 +236,14 @@
 </section>
 </main>
 <footer class="containerfoot" >
-    <div class="container">
+    <div class="container-bottom">
+<div class="logo-bottom">    
     <a href="/" class="footlogo"> <span class="web"> WEB </span> <span class="studio"> STUDIO </span> </a>
-<p class="foottext">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-
+    <p class="foottext">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+</div>
 <div>
+
+    <p style="color: aliceblue;">Social Media</p>
     <ul class="social">
         <li class="social-icon">
             <a href="" class="social-icon-link">
