--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </nav>
             <ul class="address">
                 <li class="makeflex"><a href="mailto:info@devstudio.com" class="addressstr">info@devstudio.com</a> </li>
-                <li class="makeflex"><a href="tel:+11 (000) 111-11-11" class="addresstel">+110001111111</a> </li>
+                <li class="makeflex"><a href="tel:+110001111111" class="addresstel">+110001111111</a> </li>
             </ul>
         </div>
     </header>
@@ -38,32 +38,30 @@
         <section class="textmarginbot">
             <div class="container">
                 <ul class="block">
-                    <li class="blockwdt">
-                        <div class="block-icon">
-                            <svg class="block-icon-item" wight="64px" height="64px">
-                                <use href="./images/Web Studio (Version 5.0)/icons.svg#icon-antenna"></use>
-                            </svg>
-                        </div>
-                        <h3 class="maintext">Strategy</h3>
-                        <p class="minortext">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
-                    </li>
+        <li class="blockwdt">
+        <div class="block-icon"><svg class="block-icon-item" width="64px" height="64px">
+            <use href="./images/icons.svg#icon-antenna"></use>
+        </svg></div>
+        <h3 class="maintext">Strategy</h3>
+        <p class="minortext">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+    </li>
     <li class="blockwdt">
         <div class = "block-icon"><svg class="block-icon-item" width="64px" height="64px">
-            <use href="./images/Web Studio (Version 5.0)/icons.svg#icon-clock"></use>
+            <use href="./images/icons.svg#icon-clock"></use>
         </svg></div>
         <h3 class="maintext">Punctuality</h3>
         <p class="minortext">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
     </li>
     <li class="blockwdt">
-        <div class = "block-icon"><svg class="block-icon-item" wight="64px" height="64px">
-            <use href="./images/Web Studio (Version 5.0)/icons.svg#icon-diagram"></use>
+        <div class = "block-icon"><svg class="block-icon-item" width="64px" height="64px">
+            <use href="./images/icons.svg#icon-diagram"></use>
         </svg></div>
         <h3 class="maintext">Diligence</h3>
         <p class="minortext">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
     </li>
     <li class="blockwdt">
-        <div class = "block-icon"><svg class="block-icon-item" wight="64px" height="64px">
-            <use href="./images/Web Studio (Version 5.0)/icons.svg#icon-astronaut"></use>
+        <div class = "block-icon"><svg class="block-icon-item" width="64px" height="64px">
+            <use href="./images/icons.svg#icon-astronaut"></use>
         </svg></div>
         <h3 class="maintext">Technologies</h3>
         <p class="minortext">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
@@ -88,28 +86,28 @@
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
                         <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-facebook"></use>
+                            <use href="images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
                         <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-instagram"></use>
+                            <use href="images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
                         <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-twitter"></use>
+                            <use href="images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
                         <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-linkedin"></use>
+                            <use href="images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
                 </li>
@@ -126,28 +124,28 @@
                     <li class="social-icon">
                         <a href="" class="social-icon-link">
                             <svg class="social-icon-color" width="16px" height="16px">
-                                <use href="images/Web Studio (Version 5.0)/icons.svg#icon-facebook"></use>
+                                <use href="images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-icon">
                         <a href="" class="social-icon-link">
                             <svg class="social-icon-color" width="16px" height="16px">
-                                <use href="images/Web Studio (Version 5.0)/icons.svg#icon-instagram"></use>
+                                <use href="images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-icon">
                         <a href="" class="social-icon-link">
                             <svg class="social-icon-color" width="16px" height="16px">
-                                <use href="images/Web Studio (Version 5.0)/icons.svg#icon-twitter"></use>
+                                <use href="images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-icon">
                         <a href="" class="social-icon-link">
                             <svg class="social-icon-color" width="16px" height="16px">
-                                <use href="images/Web Studio (Version 5.0)/icons.svg#icon-linkedin"></use>
+                                <use href="images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
@@ -164,28 +162,28 @@
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
                         <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-facebook"></use>
+                            <use href="images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
                         <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-instagram"></use>
+                            <use href="images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
                         <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-twitter"></use>
+                            <use href="images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
                         <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-linkedin"></use>
+                            <use href="images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
                 </li>
@@ -202,28 +200,28 @@
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
                         <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-facebook"></use>
+                            <use href="images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
                         <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-instagram"></use>
+                            <use href="images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
                         <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-twitter"></use>
+                            <use href="images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
                         <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/Web Studio (Version 5.0)/icons.svg#icon-linkedin"></use>
+                            <use href="images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
                 </li>
@@ -248,28 +246,28 @@
         <li class="social-icon">
             <a href="" class="social-icon-link">
                 <svg class="social-icon-color" width="16px" height="16px">
-                    <use href="images/Web Studio (Version 5.0)/icons.svg#icon-facebook"></use>
+                    <use href="images/icons.svg#icon-facebook"></use>
                 </svg>
             </a>
         </li>
         <li class="social-icon">
             <a href="" class="social-icon-link">
                 <svg class="social-icon-color" width="16px" height="16px">
-                    <use href="images/Web Studio (Version 5.0)/icons.svg#icon-instagram"></use>
+                    <use href="images/icons.svg#icon-instagram"></use>
                 </svg>
             </a>
         </li>
         <li class="social-icon">
             <a href="" class="social-icon-link">
                 <svg class="social-icon-color" width="16px" height="16px">
-                    <use href="images/Web Studio (Version 5.0)/icons.svg#icon-twitter"></use>
+                    <use href="images/icons.svg#icon-twitter"></use>
                 </svg>
             </a>
         </li>
         <li class="social-icon">
             <a href="" class="social-icon-link">
                 <svg class="social-icon-color" width="16px" height="16px">
-                    <use href="images/Web Studio (Version 5.0)/icons.svg#icon-linkedin"></use>
+                    <use href="images/icons.svg#icon-linkedin"></use>
                 </svg>
             </a>
         </li>
