--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
 </div>
 <div>
 
-    <p style="color: aliceblue;">Social Media</p>
-    <ul class="social">
+    <p class="p-bottom">Social media</p>
+    <ul class="p-social">
         <li class="social-icon">
             <a href="" class="social-icon-link">
                 <svg class="social-icon-color" width="16px" height="16px">
