--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
                     <li class="button-item"><a href="" class="button">Contacts</a></li>
                 </ul>
             </nav>
-            <ul class="address">
-                <li class="makeflex"><a href="mailto:info@devstudio.com" class="addressstr">info@devstudio.com</a> </li>
-                <li class="makeflex"><a href="tel:+110001111111" class="addresstel">+110001111111</a> </li>
-            </ul>
+            <address class="address">
+            
+                <li class="makeflex"><a href="mailto:info@devstudio.com" class="addresslink">info@devstudio.com</a> </li>
+                <li class="makeflex"><a href="tel:+110001111111" class="addresslink">+110001111111</a> </li>
+            
+            </address>
         </div>
     </header>
 
